# splinart

./: .appveyor.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  DEVELOPMENT.md  Project.toml  README.md  environment.yml  pyproject.toml  readme.rst  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml  release.yml
doc/: Makefile  conf.py  environment.yml  make.bat  spline.rst
doc/notebooks/: circle.nblink
docs/: Project.toml  make.jl
docs/src/: api.md  circle.md  index.md  spline.md
examples/: circle.jl  circle.py  circles.jl  circles.py  line.jl  line.py  lines.jl  lines.py
notebooks/: circle.ipynb
recipes/: meta.yaml
splinart/: __init__.py  color.py  compute.py  draw.py  version.py
splinart/scripts/: __init__.py  cli_splinart.py
splinart/shapes/: __init__.py  base.py
splinart/spline/: __init__.py  spline.py  splint.py
src/: Splinart.jl  compute.jl  draw.jl
src/shapes/: base.jl
src/spline/: spline.jl  splint.jl
test/: runtests.jl  test_all.jl  test_shape.jl  test_spline.jl
tests/: test_all.py  test_shape.py  test_spline.py
