[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "splinart"
dynamic = ["version"]
requires-python = ">=3.8"

license = { file = "LICENSE" }

description = "spline art generator"
authors = [{ name = "Loic Gouarin", email = "loic.gouarin@gmail.com" }]
readme = "readme.rst"

classifiers = [
    "Development Status :: 3 - Alpha",
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Cython',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Software Development',
    'Topic :: Scientific/Engineering',
    'Typing :: Typed',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]

dependencies = ["numpy", "matplotlib"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pytest-cov",
    "pytest-mpl",
    "nbval",
    "codecov",
    "mypy",
    "types-requests",
]

[project.scripts]
splinart = "splinart.scripts.cli_splinart:main"

[project.urls]
Source = "https://github.com/gouarin/splinart"
Documentation = "https://splinart.readthedocs.io"

[tool.setuptools.dynamic]
version = { attr = "splinart.version.__version__" }

[tool.setuptools.packages.find]
include = ["splinart*"]

[tool.pytest.ini_options]
markers = [
    "long: marks tests as long (deselect with '-m \"not long\"')",
    "serial",
]

[tool.ruff]
exclude = ["doc/conf.py", "tests"]

[tool.ruff.lint]
extend-select = [
    "UP", # pyupgrade
    "D",  # pydocstyle
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "pytest.*"]
ignore_missing_imports = true
